HIVE-29829: Iceberg: Stream partition column statistics on write, prune them on read